Airflow com spacy

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,7 +49,7 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider distributions you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:3.0.4}
+  image: airflow_spacy
   # build: .
   environment:
     &airflow-common-env
@@ -137,8 +137,8 @@ services:
       test: [ "CMD", "curl", "--fail", "http://localhost:8080/api/v2/version" ]
       interval: 30s
       timeout: 10s
-      retries: 5
-      start_period: 30s
+      retries: 10   # aumentar de 5 para 10
+      start_period: 60s  # aumentar de 30s para 60s
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
