--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ click-repl==0.3.0
 cloudpathlib==0.22.0
 colorlog==6.9.0
 confection==0.1.5
+cramjam==2.11.0
 cron-descriptor==1.4.5
 croniter==6.0.0
 cryptography==42.0.8
@@ -55,6 +56,7 @@ exceptiongroup==1.3.0
 fastapi==0.116.1
 fastapi-cli==0.0.8
 fastapi-cloud-cli==0.1.5
+fastparquet==2024.11.0
 Flask==2.2.5
 flower==2.0.1
 frozenlist==1.7.0
@@ -117,6 +119,7 @@ protobuf==4.25.8
 psutil==7.0.0
 psycopg2-binary==2.9.10
 pt_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl#sha256=c304fa04db3af73cd08a250feacf560506e15a2ec2469bd1b09f06847f6b455c
+pyarrow==21.0.0
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
