instalando duckdb no docker

--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -4,5 +4,5 @@ FROM apache/airflow:3.0.4-python3.11
 USER airflow
 
 # Instala spaCy e o modelo
-RUN pip install --no-cache-dir spacy==3.6.1 \
+RUN pip install --no-cache-dir spacy==3.6.1 duckdb==1.1.0 \
     && python -m spacy download pt_core_news_sm
