--- a/requirements.txt
+++ b/requirements.txt
@@ -108,6 +108,7 @@ opentelemetry-sdk==1.27.0
 opentelemetry-semantic-conventions==0.48b0
 packaging==25.0
 pandas==2.3.2
+pandas-stubs==2.3.2.250827
 pathspec==0.12.1
 pendulum==3.1.0
 pluggy==1.6.0
@@ -169,6 +170,7 @@ tomli==2.2.1
 tornado==6.5.2
 tqdm==4.67.1
 typer==0.16.1
+types-pytz==2025.2.0.20250809
 types-requests==2.32.4.20250809
 typing-inspection==0.4.1
 typing_extensions==4.14.1
